update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,24 +1,32 @@
-<div class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-100">
+<div
+  class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-100 relative"
+>
   <div
     class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
   >
     <div class="flex justify-between items-center w-full">
       <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
       <div class="flex items-center gap-2">
-        <div class="text-gray-400">Already have an account?</div>
+        <div class="text-gray-400">
+          {{ "ForgotPassword.AlreadyHaveAccount" | translate }}?
+        </div>
         <button
           class="btn--sm"
           mat-flat-button
           [color]="'primary'"
           routerLink="/login"
         >
-          Login
+          {{ "Login.Title" | translate }}
         </button>
       </div>
     </div>
     <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
-      <div class="font-semibold text-2xl mb-2">Forgot password</div>
-      <div class="text-secondary">Fill the form to reset your password</div>
+      <div class="font-semibold text-2xl mb-2">
+        {{ "ForgotPassword.Title" | translate }}
+      </div>
+      <div class="text-secondary">
+        {{ "ForgotPassword.SubTitle" | translate }}
+      </div>
 
       <form
         class="mt-8"
@@ -35,11 +43,48 @@
           <input matInput formControlName="email" />
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('required')"
-            >This field is required</mat-error
+            >{{ "Errors.Required" | translate }}</mat-error
           >
-          <mat-error *ngIf="forgotPasswordForm.get('email')?.hasError('email')"
-            >Please enter a valid email</mat-error
+          <mat-error
+            *ngIf="forgotPasswordForm.get('email')?.hasError('email')"
+            >{{ "Errors.Email" | translate }}</mat-error
           >
+          <mat-error
+            *ngIf="forgotPasswordForm.get('email')?.hasError('notFoundEmail')"
+            >{{ "Errors.NotFoundEmail" | translate }}</mat-error
+          >
+          <button
+            mat-icon-button
+            type="button"
+            matSuffix
+            *ngIf="
+              forgotPasswordForm.get('email')?.status !== 'PENDING' &&
+              forgotPasswordForm.get('email')?.value != ''
+            "
+            (click)="forgotPasswordForm.get('email')?.setValue('')"
+          >
+            <mat-icon
+              class="icon-size-5"
+              [svgIcon]="'mat_outline:close'"
+            ></mat-icon>
+          </button>
+          <div
+            class="ml-2"
+            matSuffix
+            *ngIf="forgotPasswordForm.get('email')?.valid"
+          >
+            <mat-icon
+              class="!text-success"
+              [svgIcon]="'mat_outline:check_circle'"
+            ></mat-icon>
+          </div>
+          <mat-progress-spinner
+            [diameter]="24"
+            *ngIf="forgotPasswordForm.get('email')?.status === 'PENDING'"
+            mode="indeterminate"
+            matSuffix
+          >
+          </mat-progress-spinner>
         </mat-form-field>
 
         <button
@@ -48,7 +93,9 @@
           [color]="'primary'"
           [disabled]="forgotPasswordForm.disabled"
         >
-          <span *ngIf="!forgotPasswordForm.disabled"> Reset password </span>
+          <span *ngIf="!forgotPasswordForm.disabled">
+            {{ "ForgotPassword.ResetPassword" | translate }}
+          </span>
           <mat-progress-spinner
             *ngIf="forgotPasswordForm.disabled"
             [diameter]="24"
@@ -57,7 +104,8 @@
           </mat-progress-spinner>
         </button>
         <div class="text-hint mt-6">
-          Back to <a routerLink="/login">Login</a>
+          {{ "ForgotPassword.BackTo" | translate }}
+          <a routerLink="/login">{{ "Login.Title" | translate }}</a>
         </div>
       </form>
     </div>
