--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -78,6 +78,6 @@ class="alert__border"
 
   <!-- Dimiss button -->
   <button *ngIf="dismissible" class="alert__dismiss-button btn btn--icon" (click)="dismiss()">
-    <mat-icon [svgIcon]="'design:close'"></mat-icon>
+    <mat-icon [svgIcon]="'mat_outline:close'"></mat-icon>
   </button>
 </div>
