--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-100 relative"
+  class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-50 relative"
 >
   <div
     class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
@@ -20,11 +20,11 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
-      <div class="font-semibold text-2xl mb-2">
+    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12">
+      <div class="font-semibold text-2xl mb-2 text-center">
         {{ "ForgotPassword.Title" | translate }}
       </div>
-      <div class="text-secondary">
+      <div class="text-secondary text-center">
         {{ "ForgotPassword.SubTitle" | translate }}
       </div>
 
@@ -40,7 +40,7 @@
         }}</alert>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" />
+          <input matInput formControlName="email" #email />
           <mat-error
             *ngIf="forgotPasswordForm.get('email')?.hasError('required')"
             >{{ "Errors.Required" | translate }}</mat-error
@@ -59,7 +59,8 @@
             matSuffix
             *ngIf="
               forgotPasswordForm.get('email')?.status !== 'PENDING' &&
-              forgotPasswordForm.get('email')?.value != ''
+              email.value != '' &&
+              !forgotPasswordForm.disabled
             "
             (click)="forgotPasswordForm.get('email')?.setValue('')"
           >
