--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-100 relative"
+  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
 >
   <div
     class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
@@ -20,8 +20,8 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
-      <div class="font-semibold text-gray-900 text-2xl">
+    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12">
+      <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
 
