--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-100 relative"
+  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
 >
   <div
     class="w-full max-w-7xl p-4 flex flex-col gap-14 items-center justify-start"
@@ -20,8 +20,8 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12 sm:bg-white">
-      <div class="font-semibold text-gray-900 text-2xl mb-2">
+    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12">
+      <div class="font-semibold text-gray-900 text-2xl mb-2 text-center">
         {{ "Register.Title" | translate }}
       </div>
 
@@ -33,7 +33,7 @@
       >
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" />
+          <input matInput formControlName="email" #email />
           <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
             {{ "Errors.Required" | translate }}
           </mat-error>
@@ -51,7 +51,7 @@
             matSuffix
             *ngIf="
               registerForm.get('email')?.status !== 'PENDING' &&
-              registerForm.get('email')?.value != ''
+              email.value != ''
             "
             (click)="registerForm.get('email')?.setValue('')"
           >
