--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -20,8 +20,8 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 sm:py-12">
-      <div class="font-semibold text-2xl mb-2 text-center">
+    <div class="w-full max-w-md rounded-md sm:px-12">
+      <div class="font-semibold text-2xl mb-2 text-center capitalize">
         {{ "ForgotPassword.Title" | translate }}
       </div>
       <div class="text-secondary text-center">
