--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -8,7 +8,7 @@
       <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
       <div class="flex items-center gap-2">
         <button
-          class="btn--sm"
+          class="btn"
           type="button"
           mat-button
           [color]="'primary'"
@@ -19,12 +19,12 @@
       </div>
     </div>
 
-    <div class="w-full">
-      <div class="font-semibold text-gray-900 text-2xl text-center mb-12">
+    <div class="w-full max-w-md rounded-md sm:px-12">
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-12 capitalize">
         {{ "OnBoarding.SelectAccountType" | translate }}
       </div>
 
-      <div class="flex gap-12 justify-center">
+      <div class="flex gap-14 justify-center">
         <div
           class="flex flex-col items-center gap-3 cursor-pointer"
           *ngFor="let type of accountTypeList"
@@ -57,7 +57,7 @@
       <div class="mt-12 flex justify-center">
         <button
           type="submit"
-          class="btn btn--lg"
+          class="btn btn--lg w-full"
           mat-flat-button
           [color]="'primary'"
           (click)="continue()"
