--- a/src/app/modules/onboarding/student-basic-info/student-basic-info.component.html
+++ b/src/app/modules/onboarding/student-basic-info/student-basic-info.component.html
@@ -5,13 +5,18 @@
     class="w-full max-w-7xl p-4 flex flex-col gap-20 items-center justify-start"
   >
     <div class="flex justify-between items-center w-full">
-      <button mat-button class="btn--sm">
-        <mat-icon class="text-gray-400" svgIcon="mat_outline:arrow_back"></mat-icon>
-        <div class="text-gray-400 ml-2">{{ "OnBoarding.Back" | translate }}</div>
+      <button mat-button class="btn" [color]="'primary'">
+        <mat-icon
+          class="!text-gray-500"
+          svgIcon="mat_outline:arrow_back"
+        ></mat-icon>
+        <div class="text-gray-500 ml-2">
+          {{ "OnBoarding.Back" | translate }}
+        </div>
       </button>
       <div class="flex items-center gap-2">
         <button
-          class="btn--sm"
+          class="btn"
           type="button"
           mat-button
           [color]="'primary'"
@@ -22,18 +27,57 @@
       </div>
     </div>
 
-    <div class="w-full">
-      <div class="font-semibold text-gray-900 text-2xl text-center mb-12">
-        {{ "OnBoarding.BasicInfo" | translate }}
+    <div class="w-full max-w-md rounded-md sm:px-12">
+      <div class="font-semibold text-gray-900 text-2xl text-center capitalize">
+        {{ "OnBoarding.StudentInfo" | translate }}
       </div>
 
-      <div class="mt-12 flex justify-center">
+      <form class="mt-8" [formGroup]="studentInfoForm" (ngSubmit)="submit()">
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>{{ "OnBoarding.FirstName" | translate }}</mat-label>
+          <input matInput formControlName="firstName" />
+          <mat-error
+            *ngIf="studentInfoForm.get('firstName')?.hasError('required')"
+            >{{ "Errors.Required" | translate }}</mat-error
+          >
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>{{ "OnBoarding.LastName" | translate }}</mat-label>
+          <input matInput formControlName="lastName" placeholder="Last name" />
+          <mat-error
+            *ngIf="studentInfoForm.get('lastName')?.hasError('required')"
+            >{{ "Errors.Required" | translate }}</mat-error
+          >
+        </mat-form-field>
+        <div class="flex gap-6 mb-4 items-center">
+          <div class="text-gray-500 font-medium">Gender:</div>
+          <mat-radio-group class="flex gap-4">
+            <mat-radio-button value="male">Male</mat-radio-button>
+            <mat-radio-button value="female">Female</mat-radio-button>
+            <mat-radio-button value="other">Other</mat-radio-button>
+          </mat-radio-group>
+        </div>
+
+        <mat-form-field appearance="fill" class="w-full">
+          <mat-label>{{ "OnBoarding.Occupation" | translate }}</mat-label>
+          <mat-select formControlName="occupation" placeholder="Select">
+            <mat-option> Học sinh - Sinh viên </mat-option>
+            <mat-option> Người đi làm </mat-option>
+            <mat-option> Khác </mat-option>
+          </mat-select>
+          <mat-error
+            *ngIf="studentInfoForm.get('occupation')?.hasError('required')"
+            >{{ "Errors.Required" | translate }}</mat-error
+          >
+        </mat-form-field>
+      </form>
+
+      <div class="mt-6 flex justify-center">
         <button
           type="submit"
-          class="btn btn--lg"
+          class="btn btn--lg w-full"
           mat-flat-button
           [color]="'primary'"
-          (click)="continue()"
         >
           Continue
         </button>
