--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
 >
   <div
-    class="w-full max-w-7xl p-4 flex flex-col gap-16 items-center justify-start"
+    class="w-full max-w-7xl p-4 flex flex-col gap-10 items-center justify-start"
   >
     <div class="flex justify-between items-center w-full">
       <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="w-full max-w-md rounded-md sm:px-12">
-      <div class="font-semibold text-gray-900 text-2xl text-center capitalize">
+      <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
 
