--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -2,32 +2,29 @@
   class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
 >
   <div
-    class="w-full max-w-7xl p-4 flex flex-col gap-16 items-center justify-start"
+    class="w-full max-w-7xl p-4 flex flex-col gap-10 items-center justify-start"
   >
-    <div class="flex justify-between items-center w-full">
+    <div class="flex justify-between w-full">
       <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
-      <div class="flex items-center gap-2">
-        <button class="btn btn--sm" type="button" mat-button (click)="logout()">
-          <div class="text-primary">{{ "OnBoarding.Logout" | translate }}</div>
-        </button>
-      </div>
+
+      <button class="btn btn--sm" type="button" mat-button (click)="logout()">
+        <div class="text-primary">{{ "OnBoarding.Logout" | translate }}</div>
+      </button>
     </div>
 
     <div class="w-full max-w-md rounded-md sm:px-12">
-      <div
-        class="font-semibold text-gray-900 text-2xl text-center mb-12 capitalize"
-      >
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-12">
         {{ "OnBoarding.SelectAccountType" | translate }}
       </div>
 
-      <div class="flex gap-14 justify-center">
+      <div class="flex gap-8 justify-between">
         <div
-          class="flex flex-col items-center gap-3 cursor-pointer"
+          class="flex flex-col items-center gap-4 cursor-pointer"
           *ngFor="let type of accountTypeList"
           (click)="selectedAccountType = type"
         >
           <div
-            class="border-4 rounded-md w-32 h-32 flex justify-center items-center bg-white"
+            class="border-4 rounded-md w-40 h-40 flex justify-center items-center bg-white"
             [ngClass]="selectedAccountType === type ? 'border-primary' : ''"
           >
             <mat-icon
