--- a/src/app/modules/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/onboarding/student-info/student-info.component.html
@@ -2,17 +2,19 @@
   class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
 >
   <div
-    class="w-full max-w-7xl p-4 flex flex-col gap-16 items-center justify-start"
+    class="w-full max-w-7xl p-4 flex flex-col gap-10 items-center justify-start"
   >
     <div class="flex justify-between w-full">
-      <button mat-button class="btn btn--sm" type="button">
+      <button
+        mat-button
+        class="btn btn--sm"
+        type="button"
+        routerLink="/onboarding/account-type"
+      >
         <mat-icon
           class="!text-gray-500"
           svgIcon="mat_outline:arrow_back"
         ></mat-icon>
-        <div class="text-gray-500 ml-2">
-          {{ "OnBoarding.Back" | translate }}
-        </div>
       </button>
 
       <button mat-button class="btn btn--sm" type="button" (click)="logout()">
@@ -23,7 +25,7 @@
     </div>
 
     <div class="w-full max-w-md rounded-md sm:px-12">
-      <div class="font-semibold text-gray-900 text-2xl text-center capitalize">
+      <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "OnBoarding.StudentInfo" | translate }}
       </div>
 
@@ -38,7 +40,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>{{ "OnBoarding.LastName" | translate }}</mat-label>
-          <input matInput formControlName="lastName" placeholder="Last name" />
+          <input matInput formControlName="lastName" />
           <mat-error
             *ngIf="studentInfoForm.get('lastName')?.hasError('required')"
             >{{ "Errors.Required" | translate }}</mat-error
@@ -57,9 +59,19 @@
             >{{ "Errors.Required" | translate }}</mat-error
           >
         </mat-form-field>
-        <mat-form-field appearance="fill" class="w-full">
+        <mat-form-field
+          appearance="fill"
+          class="w-full"
+          [floatLabel]="'always'"
+          (click)="picker.open()"
+        >
           <mat-label>{{ "OnBoarding.DateOfBirth" | translate }}</mat-label>
-          <input matInput [matDatepicker]="picker" />
+          <input
+            readonly
+            matInput
+            [matDatepicker]="picker"
+            placeholder="DD/MM/YYYY"
+          />
           <mat-datepicker-toggle
             matIconSuffix
             [for]="picker"
