--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -629,3 +629,22 @@
     @apply border-gray-200 dark:border-gray-600 #{'!important'};
   }
 }
+
+/* ----------------------------------------------------------------------------------------------------- */
+/*  @ Datepicker
+/* ----------------------------------------------------------------------------------------------------- */
+
+.mat-calendar {
+  @apply leading-none;
+}
+
+/* Hover and active cell content background opacity */
+.mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover,
+.cdk-keyboard-focused .mat-calendar-body-active,
+.cdk-program-focused .mat-calendar-body-active {
+  & > .mat-calendar-body-cell-content {
+    &:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
+      @apply bg-primary bg-opacity-30 #{'!important'};
+    }
+  }
+}
