update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,11 +1,12 @@
 <div
-  class="w-full min-h-full gap-4 flex flex-col items-center bg-gray-50 relative"
+  class="w-full min-h-full gap-6 flex flex-col items-center bg-gray-50 relative"
 >
-  <div
-    class="w-full max-w-7xl p-4 flex flex-col gap-10 items-center justify-start"
-  >
-    <div class="flex justify-between items-center w-full">
-      <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+  <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
+    <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
+      <div class="flex items-center gap-3">
+        <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+        <app-languages></app-languages>
+      </div>
       <div class="flex items-center gap-2">
         <div class="text-gray-400">
           {{ "ForgotPassword.AlreadyHaveAccount" | translate }}?
@@ -20,14 +21,10 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12">
+    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
       <div class="font-semibold text-2xl mb-2 text-center">
         {{ "ForgotPassword.Title" | translate }}
       </div>
-      <div class="text-secondary text-center">
-        {{ "ForgotPassword.SubTitle" | translate }}
-      </div>
-
       <form
         class="mt-8"
         [formGroup]="forgotPasswordForm"
@@ -95,7 +92,7 @@
           [disabled]="forgotPasswordForm.disabled"
         >
           <span *ngIf="!forgotPasswordForm.disabled">
-            {{ "ForgotPassword.ResetPassword" | translate }}
+            {{ "ForgotPassword.SendLink" | translate }}
           </span>
           <mat-progress-spinner
             *ngIf="forgotPasswordForm.disabled"
