--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -1,23 +1,24 @@
 <div
-  class="w-full min-h-full flex flex-col gap-4 items-center bg-gray-50 relative"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative"
 >
-  <div
-    class="w-full max-w-7xl p-4 flex flex-col gap-10 items-center justify-start"
-  >
-    <div class="flex justify-between w-full">
-      <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+  <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
+    <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
+      <div class="flex items-center gap-3">
+        <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+        <app-languages></app-languages>
+      </div>
 
       <button class="btn btn--sm" type="button" mat-button (click)="logout()">
         <div class="text-primary">{{ "OnBoarding.Logout" | translate }}</div>
       </button>
     </div>
 
-    <div class="w-full max-w-md rounded-md sm:px-12">
-      <div class="font-semibold text-gray-900 text-2xl text-center mb-12">
+    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-8">
         {{ "OnBoarding.SelectAccountType" | translate }}
       </div>
 
-      <div class="flex gap-8 justify-between">
+      <div class="flex gap-8 sm:justify-between justify-center">
         <div
           class="flex flex-col items-center gap-4 cursor-pointer"
           *ngFor="let type of accountTypeList"
@@ -47,7 +48,7 @@
         </div>
       </div>
 
-      <div class="mt-12 flex justify-center">
+      <div class="mt-6 flex justify-center">
         <button
           type="submit"
           class="btn btn--lg w-full"
