--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
   <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
       <div class="flex items-center gap-3">
-        <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+        <a class="font-bold text-gray-900 text-xl hover:no-underline" routerLink="/">Vietspeak</a>
         <app-languages></app-languages>
       </div>
       <div class="flex items-center gap-2">
@@ -21,7 +21,7 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
+    <div class="w-full max-w-sm rounded-md px-4 pb-6">
       <div class="font-semibold text-2xl mb-2 text-center">
         {{ "ForgotPassword.Title" | translate }}
       </div>
