--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
   >
     <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
       <div class="flex items-center gap-3">
-        <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
+        <a class="font-bold text-gray-900 text-xl hover:no-underline" routerLink="/">Vietspeak</a>
         <app-languages></app-languages>
       </div>
       
@@ -24,7 +24,7 @@
         </button>
       </div>
     </div>
-    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
+    <div class="w-full max-w-sm rounded-md px-4 pb-6">
       <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
