--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -13,12 +13,12 @@
       </button>
     </div>
 
-    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
+    <div class="w-full max-w-sm rounded-md px-4 pb-6">
       <div class="font-semibold text-gray-900 text-2xl text-center mb-8">
         {{ "OnBoarding.SelectAccountType" | translate }}
       </div>
 
-      <div class="flex gap-8 sm:justify-between justify-center">
+      <div class="flex gap-6 justify-between">
         <div
           class="flex flex-col items-center gap-4 cursor-pointer"
           *ngFor="let type of accountTypeList"
