--- a/src/app/modules/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/onboarding/student-info/student-info.component.html
@@ -1,9 +1,7 @@
 <div
   class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative"
 >
-  <div
-    class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start"
-  >
+  <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
       <button
         mat-button
@@ -11,10 +9,15 @@
         type="button"
         routerLink="/onboarding/account-type"
       >
-        <mat-icon
-          class="!text-gray-500"
-          svgIcon="mat_outline:arrow_back"
-        ></mat-icon>
+        <div class="flex items-center gap-1">
+          <mat-icon
+            class="!text-gray-500"
+            svgIcon="mat_outline:arrow_back"
+          ></mat-icon>
+          <div class="text-gray-500">
+            {{ "OnBoarding.Back" | translate }}
+          </div>
+        </div>
       </button>
 
       <button mat-button class="btn btn--sm" type="button" (click)="logout()">
@@ -24,7 +27,7 @@
       </button>
     </div>
 
-    <div class="w-full max-w-md rounded-md sm:px-12 px-4">
+    <div class="w-full max-w-sm rounded-md px-4 pb-6">
       <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "OnBoarding.StudentInfo" | translate }}
       </div>
