--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -106,6 +106,11 @@
 
       .mat-datepicker-toggle {
         margin-right: -8px;
+        @apply text-gray-400;
+      }
+
+      .mat-select-arrow {
+        @apply text-gray-400;
       }
 
       .mat-form-field-prefix,
@@ -526,6 +531,7 @@
   }
 
   &.mat-button-disabled {
+    color: white !important;
     .mat-button-focus-overlay {
       opacity: 0 !important;
     }
