--- a/src/app/modules/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/onboarding/account-type/account-type.component.html
@@ -1,21 +1,21 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative pb-20 px-4"
 >
-  <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
-    <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
-      <div class="flex items-center gap-3">
+  <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
+    <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
+      <div class="flex items-center gap-2">
         <div class="font-bold text-gray-900 text-xl">Vietspeak</div>
         <app-languages></app-languages>
       </div>
 
-      <button class="btn btn--sm" type="button" mat-button (click)="logout()">
+      <button class="btn" type="button" mat-button (click)="logout()">
         <div class="text-primary">{{ "OnBoarding.Logout" | translate }}</div>
       </button>
     </div>
 
-    <div class="w-full max-w-sm rounded-md px-4 pb-6">
-      <div class="font-semibold text-gray-900 text-2xl text-center mb-8">
-        {{ "OnBoarding.SelectAccountType" | translate }}
+    <div class="w-full max-w-sm">
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-10">
+        {{ "SelectAccountType.Title" | translate }}
       </div>
 
       <div class="flex gap-6 justify-between">
@@ -25,7 +25,7 @@
           (click)="selectedAccountType = type"
         >
           <div
-            class="border-4 rounded-md w-40 h-40 flex justify-center items-center bg-white"
+            class="border-4 rounded-md w-44 h-44 flex justify-center items-center bg-white"
             [ngClass]="selectedAccountType === type ? 'border-primary' : ''"
           >
             <mat-icon
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="mt-6 flex justify-center">
+      <div class="mt-8 flex justify-center">
         <button
           type="submit"
           class="btn btn--lg w-full"
@@ -57,7 +57,7 @@
           (click)="continue()"
           [disabled]="selectedAccountType == null"
         >
-          Continue
+          {{ "SelectAccountType.Continue" | translate }}
         </button>
       </div>
     </div>
