--- a/src/app/modules/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/onboarding/tutor-info/tutor-info.component.html
@@ -1,11 +1,11 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative pb-20 px-4"
 >
-  <div class="w-full max-w-7xl flex flex-col gap-12 items-center justify-start">
-    <div class="flex justify-between items-center gap-4 w-full p-4 h-16">
+  <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
+    <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <button
         mat-button
-        class="btn btn--sm"
+        class="btn btn"
         type="button"
         routerLink="/onboarding/account-type"
       >
@@ -20,34 +20,102 @@
         </div>
       </button>
 
-      <button mat-button class="btn btn--sm" type="button" (click)="logout()">
+      <button mat-button class="btn" type="button" (click)="logout()">
         <div class="text-primary">
           {{ "OnBoarding.Logout" | translate }}
         </div>
       </button>
     </div>
 
-    <div class="w-full max-w-sm rounded-md px-4 pb-6">
-      <div class="font-semibold text-gray-900 text-2xl text-center">
-        {{ "OnBoarding.TutorInfo" | translate }}
+    <div class="w-full max-w-lg">
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-4">
+        {{ "TutorInfo.Title" | translate }}
       </div>
 
-      <form
-        class="mt-8"
-        [formGroup]="tutorInfoForm"
-        (ngSubmit)="submit()"
-      ></form>
-
-      <div class="mt-6 flex justify-center">
-        <button
-          type="submit"
-          class="btn btn--lg w-full"
-          mat-flat-button
-          [color]="'primary'"
-        >
-          Continue
-        </button>
-      </div>
+      <mat-stepper orientation="horizontal" class="!bg-inherit" [disableRipple]="true">
+        <mat-step>
+          <ng-template matStepLabel>{{
+            "TutorInfo.BasicInfo" | translate
+          }}</ng-template>
+          <ng-template matStepContent>
+            <div class="flex justify-center -mx-6 sm:px-6">
+              <div class="w-full mt-4">
+                <form [formGroup]="tutorBasicInfoForm">
+                  <mat-form-field appearance="fill" class="w-full">
+                    <mat-label>{{
+                      "TutorInfo.LanguageWantToTeach" | translate
+                    }}</mat-label>
+                    <mat-select
+                      formControlName="teachingLanguage"
+                      placeholder="Select"
+                    >
+                      <mat-option
+                        *ngFor="let item of teachingLanguageOptions"
+                        [value]="item.value"
+                      >
+                        {{ item.label | translate }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error
+                      *ngIf="
+                        tutorBasicInfoForm
+                          .get('teachingLanguage')
+                          ?.hasError('required')
+                      "
+                      >{{ "Errors.Required" | translate }}</mat-error
+                    >
+                  </mat-form-field>
+                  <mat-form-field appearance="fill" class="w-full">
+                    <mat-label>{{
+                      "TutorInfo.FirstName" | translate
+                    }}</mat-label>
+                    <input matInput formControlName="firstName" />
+                    <mat-error
+                      *ngIf="
+                        tutorBasicInfoForm
+                          .get('firstName')
+                          ?.hasError('required')
+                      "
+                      >{{ "Errors.Required" | translate }}</mat-error
+                    >
+                  </mat-form-field>
+                  <mat-form-field appearance="fill" class="w-full">
+                    <mat-label>{{
+                      "TutorInfo.LastName" | translate
+                    }}</mat-label>
+                    <input matInput formControlName="lastName" />
+                    <mat-error
+                      *ngIf="
+                        tutorBasicInfoForm
+                          .get('lastName')
+                          ?.hasError('required')
+                      "
+                      >{{ "Errors.Required" | translate }}</mat-error
+                    >
+                  </mat-form-field>
+                </form>
+              </div>
+            </div>
+          </ng-template>
+        </mat-step>
+        <mat-step>
+          <ng-template matStepLabel>{{
+            "TutorInfo.Experience" | translate
+          }}</ng-template>
+          <ng-template matStepContent>
+            <p>This content was also rendered lazily</p>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Next</button>
+          </ng-template>
+        </mat-step>
+        <mat-step>
+          <ng-template matStepLabel>{{
+            "TutorInfo.AdditionalInfo" | translate
+          }}</ng-template>
+          <p>This content was rendered eagerly</p>
+          <button mat-button matStepperPrevious>Back</button>
+        </mat-step>
+      </mat-stepper>
     </div>
   </div>
 </div>
